// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleBylineWithLinks tests on iOS 1. single inline element 1`] = `
<View>
  <Text>
    Lindsay McIntosh Scottish Political Editor
  </Text>
</View>
`;

exports[`ArticleBylineWithLinks tests on iOS 2. with the author in the begining 1`] = `
<View>
  <Text
    accessibilityRole="link"
  >
    Camilla Long
  </Text>
  <Text>
    , Environment Editor
  </Text>
</View>
`;

exports[`ArticleBylineWithLinks tests on iOS 3. with the author at the end 1`] = `
<View>
  <Text>
    RBS Six Nations 
  </Text>
  <Text
    accessibilityRole="link"
  >
    Mike Atherton
  </Text>
</View>
`;

exports[`ArticleBylineWithLinks tests on iOS 4. with multiple authors separated by text with commas 1`] = `
<View>
  <Text
    accessibilityRole="link"
  >
    Camilla Long
  </Text>
  <Text>
    , 
  </Text>
  <Text
    accessibilityRole="link"
  >
    Mike Atherton
  </Text>
  <Text>
    , 
  </Text>
  <Text
    accessibilityRole="link"
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`ArticleBylineWithLinks tests on iOS 5. with multiple authors separated by spaces 1`] = `
<View>
  <Text
    accessibilityRole="link"
  >
    Camilla Long
  </Text>
  <Text>
     
  </Text>
  <Text
    accessibilityRole="link"
  >
    Mike Atherton
  </Text>
  <Text>
     
  </Text>
  <Text
    accessibilityRole="link"
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`ArticleBylineWithLinks tests on iOS 6. null with an empty ast 1`] = `null`;
